# spg

./: README.md  passg.c  passg.py  requirements.txt  setup.cfg  setup.py
spg/: __init__.py  requirements.txt  spg.py
src/: spg  spg.py
