[metadata]
name = spg
version = 0.0.1
author = Mattio-cmd
author_email = mattioc@protonmail.com
description = secure password generator written in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mattio-cmd/spg
classifiers = 
  Development Status :: 1 - Planning
  Intended Audience :: Power Users
  Operatin System :: Unix & Unix Like
  Programing Language :: Python :: 3
  License :: GPL v3.0

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
